--- a/src/components/Navbar/Сaught/CaughtPokemons.module.css
+++ b/src/components/Navbar/Сaught/CaughtPokemons.module.css
@@ -1,23 +1,33 @@
-.pokedesWrapper{
+.pokedesWrapper {
 
 }
-.cardWrapper{
+
+.cardWrapper {
+    width: 30%;
+    height: 30%;
     background-color: bisque;
     display: block;
     float: left;
     position: relative;
     margin: 0 .78125% 50px;
-    width: auto;
-
     border: salmon solid 2px;
 }
 
-.figure {
+.imgWrapper {
+    margin: 0 auto;
+    display: block;
+    width: 75%;
+
 
 }
 
-.id{
-    font-family: "Roboto",arial,sans-serif;
+
+.figure {
+}
+
+
+.id {
+    font-family: "Roboto", arial, sans-serif;
     font-weight: bold;
     color: sandybrown;
     font-size: 80%;
