--- a/src/components/PokemonStatusBtn/PokemonStatus.module.css
+++ b/src/components/PokemonStatusBtn/PokemonStatus.module.css
@@ -33,3 +33,16 @@
     font-size: 80%;
     padding-top: 2px;
 }
+
+
+.button {
+    border: none;
+    padding: 8px 20px;
+    background-color: mintcream;
+    border-radius: 2px;
+    box-shadow: 0 0 3px rgba(0,0,0,0.5);
+    margin-left: 35%;
+}
+.button:disabled {
+    opacity:0.4;
+}
