--- a/src/components/Pokemon/Pokemon.module.css
+++ b/src/components/Pokemon/Pokemon.module.css
@@ -15,6 +15,35 @@
 	margin: 0 auto;
 	display: block;
 	width: 75%;
+}
 
+.button {
+	border: none;
+	background-color: mintcream;
+	border-radius: 2px;
+	box-shadow: 0 0 3px rgba(0,0,0,0.5);
+	margin-left: 35%;
+}
 
+.id{
+	margin-left: 85%;
+}
+
+.nameWrapper{
+
+	text-align: center;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 31px;
+	letter-spacing: 2.6px;
+	word-spacing: 0.4px;
+	color: #000000;
+	font-weight: normal;
+	text-decoration: none;
+	font-style: normal;
+	font-variant: normal;
+	text-transform: none;
+}
+
+.name{
+	margin: 0;
 }
